workspace-sf/force-app/main/default/objects/RemuneracaoOrcamento__c/RemuneracaoOrcamento__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre a oportunidade e o tipo de remuneração.</description>
    <label>Remuneração do orçamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remunerações do orçamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>