workspace-sf/force-app/main/default/objects/RemuneracaoOrcamento__c/fields/ImprimirCodigoOperacao__c.field-meta.xml
<CustomField>
    <fullName>ImprimirCodigoOperacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imprimir código de operação?</label>
    <type>Checkbox</type>
</CustomField>