workspace-sf/force-app/main/default/objects/RemuneracaoOrcamento__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <label>Orçamento</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Remunerações do orçamento</relationshipLabel>
    <relationshipName>RemuneracoesOrcamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>