workspace-sf/force-app/main/default/objects/RemuneracaoOrcamento__c/fields/Porcentagem_de_Retencao__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem_de_Retencao__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% de Retenção</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>